Bug 80873 - Removing HTMLTrackElement does not delete TextTrack
Summary: Removing HTMLTrackElement does not delete TextTrack
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Eric Carlson
URL:
Keywords: InRadar
Depends on:
Blocks: 43668
  Show dependency treegraph
 
Reported: 2012-03-12 13:02 PDT by Eric Carlson
Modified: 2012-03-21 11:29 PDT (History)
2 users (show)

See Also:


Attachments
Proposed patch (6.95 KB, patch)
2012-03-12 14:19 PDT, Eric Carlson
koivisto: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Carlson 2012-03-12 13:02:31 PDT
r105434 introduced a bug which causes a HTMLTrackElement's TextTrack to not be removed from the HTMLMediaElement's tracks collection.
Comment 1 Radar WebKit Bug Importer 2012-03-12 13:03:49 PDT
<rdar://problem/11031795>
Comment 2 Eric Carlson 2012-03-12 14:19:52 PDT
Created attachment 131408 [details]
Proposed patch
Comment 3 Victor Carbune 2012-03-14 12:23:39 PDT
I believe I can't review+ it, but nice catch and the patch looks good to me.
Comment 4 Antti Koivisto 2012-03-20 07:21:03 PDT
Comment on attachment 131408 [details]
Proposed patch

View in context: https://bugs.webkit.org/attachment.cgi?id=131408&action=review

r=me

> Source/WebCore/html/HTMLMediaElement.h:208
>      virtual void trackWasAdded(HTMLTrackElement*);
> -    virtual void trackWasRemoved(HTMLTrackElement*);
> +    virtual void trackWillBeRemoved(HTMLTrackElement*);

I think the usual naming pattern is didAddTrack/willRemoveTrack
Comment 5 Eric Carlson 2012-03-21 11:29:35 PDT
http://trac.webkit.org/changeset/111581