Removing HTMLTrackElement does not delete TextTrack https://bugs.webkit.org/show_bug.cgi?id=80873

Reviewed by Antti Koivisto.

Source/WebCore:

No new tests, but media/track/track-language-preference.html has been updated
to test this fix.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::didAddTrack): Renamed from trackWasAdded.
(WebCore::HTMLMediaElement::willRemoveTrack): Renamed from trackWasRemoved because it is
called before the track is removed, to allow the TextTrack to be removed.
* html/HTMLMediaElement.h:

* html/HTMLTrackElement.cpp:
(WebCore::HTMLTrackElement::insertedIntoTree): Renamed from insertedIntoDocument
(WebCore::HTMLTrackElement::willRemove): Renamed from removedFromDocument.
* html/HTMLTrackElement.h:

* html/track/LoadableTextTrack.cpp:
(WebCore::LoadableTextTrack::trackElementIndex): Don't include tracks that are not in the
document in the calcualtion.

LayoutTests:

* media/track/track-language-preference-expected.txt:
* media/track/track-language-preference.html:


Canonical link: https://commits.webkit.org/99084@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111581 268f45cc-cd09-0410-ab3c-d52691b4dbfc