Source/WebCore/html/HTMLTrackElement.h
@@ -77,8 +77,8 @@ private:
 
     virtual void parseAttribute(Attribute*) OVERRIDE;
 
-    virtual void insertedIntoDocument() OVERRIDE;
-    virtual void removedFromDocument() OVERRIDE;
+    virtual void insertedIntoTree(bool) OVERRIDE;
+    virtual void willRemove() OVERRIDE;
     virtual bool isURLAttribute(Attribute*) const;
 
 #if ENABLE(MICRODATA)
