Source/WebCore/html/track/LoadableTextTrack.cpp
@@ -135,10 +135,11 @@ size_t LoadableTextTrack::trackElementIndex()
 {
     ASSERT(m_trackElement);
     ASSERT(m_trackElement->parentNode());
+    ASSERT(m_trackElement->inDocument());
 
     size_t index = 0;
     for (Node* node = m_trackElement->parentNode()->firstChild(); node; node = node->nextSibling()) {
-        if (!node->hasTagName(trackTag))
+        if (!node->hasTagName(trackTag) || !node->inDocument())
             continue;
         if (node == m_trackElement)
             return index;
